// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keys() should fail 1`] = `
Object {
  "message": "Keys should follow the rule: Every value should follow the rule: Value should match regexp: /^test/",
  "path": Array [],
  "requirement": Object {
    "message": "Every value should follow the rule: Value should match regexp: /^test/",
    "path": Array [],
    "requirement": Object {
      "message": "Value should match regexp: /^test/",
      "path": Array [
        "1",
      ],
      "type": "single",
      "value": "b",
    },
    "type": "dependence",
    "value": Array [
      "testA",
      "b",
    ],
  },
  "type": "dependence",
  "value": Object {
    "b": "text",
    "testA": 5,
  },
}
`;

exports[`keys() should support custom message 1`] = `
Object {
  "message": "Custom message",
  "path": Array [],
  "requirement": Object {
    "message": "Every value should follow the rule: Value should match regexp: /^test/",
    "path": Array [],
    "requirement": Object {
      "message": "Value should match regexp: /^test/",
      "path": Array [
        "1",
      ],
      "type": "single",
      "value": "b",
    },
    "type": "dependence",
    "value": Array [
      "testA",
      "b",
    ],
  },
  "type": "dependence",
  "value": Object {
    "b": "text",
    "testA": 5,
  },
}
`;
